passed the list of available cameras via constructor and added a getter for cameras