@@ -4,30 +4,17 @@ import java.util.Collections;
 import java.util.List;
 
 public enum PhoneModel {
-    NOKIA_1100 {
-        private final List<String> cameras = Collections.emptyList();
+    NOKIA_1100(Collections.emptyList()),
+    NOKIA_3110(List.of("back camera")),
+    GALAXY_S2(List.of("back camera", "front camera"));
 
-        @Override
-        public List<String> cameras() {
-            return cameras;
-        }
-    },
-    NOKIA_3110 {
-        private final List<String> cameras = List.of("back camera");
+    private final List<String> cameraList;
 
-        @Override
-        public List<String> cameras() {
-            return cameras;
-        }
-    },
-    GALAXY_S2 {
-        private final List<String> cameras = List.of("back camera", "front camera");
+    PhoneModel(List<String> cameraList) {
+        this.cameraList = cameraList;
+    }
 
-        @Override
-        public List<String> cameras() {
-            return cameras;
-        }
-    };
-
-    public abstract List<String> cameras();
+    public List<String> getCameraList() {
+        return cameraList;
+    }
 }
